--- a/032923/index.html
+++ b/032923/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Tape Loop Test</title>
-    <script src="../lib/Tone.js"></script>
+    <script src="Tone.js"></script>
   </head>
   <body>
     <h1>Tape Loop Test</h1>
