--- a/032923/index.html
+++ b/032923/index.html
@@ -5,7 +5,7 @@
     <script src="Tone.js"></script>
   </head>
   <body>
-    <h1>Tape Loop Test</h1>
+    <h1>Gnerative Piece</h1>
     <button onclick="play()">Play</button>
     <button onclick="stop()">Stop</button>
     <script src="script.js"></script>
